SERVER-25183 scoped_db_conn_test.exe - DontReturnConnGoneBadToPool Failed