src/mongo/client/connpool.h
@@ -62,9 +62,17 @@ public:
           _minValidCreationTimeMicroSec(0),
           _type(ConnectionString::INVALID),
           _maxPoolSize(kPoolSizeUnlimited),
-          _checkedOut(0) {}
+          _checkedOut(0),
+          _badConns(0) {}
 
     ~PoolForHost();
+
+    /**
+     * Returns the number of connections in this pool that went bad.
+     */
+    int getNumBadConns() const {
+        return _badConns;
+    }
 
     /**
      * Returns the maximum number of connections stored in the pool
@@ -133,7 +141,7 @@ private:
     struct StoredConnection {
         StoredConnection(DBClientBase* c);
 
-        bool ok(time_t now);
+        bool ok();
 
         DBClientBase* conn;
         time_t when;
@@ -151,6 +159,9 @@ private:
 
     // The number of currently active connections from this pool
     int _checkedOut;
+
+    // The number of connections that we did not reuse because they went bad.
+    int _badConns;
 };
 
 class DBConnectionHook {
@@ -216,6 +227,7 @@ public:
 
     DBClientBase* get(const std::string& host, double socketTimeout = 0);
     DBClientBase* get(const ConnectionString& host, double socketTimeout = 0);
+    int getNumBadConns(const std::string& host, double socketTimeout = 0) const;
 
     void release(const std::string& host, DBClientBase* c);
 
